fixed code smells, added rethrows to edc responses